package com.ecommerce.backend.domain.seller;

public enum PaymentMethod {
    DINHEIRO,
    DEBITO,
    CREDITO,
    PIX
}